--- a/.github/workflows/linux_appimage.yml
+++ b/.github/workflows/linux_appimage.yml
@@ -19,8 +19,9 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Run script
+      - name: Prepare AppImage
         run: |
+          sudo apt install -y libfuse2
           ./build_appimage.sh
 
       - name: Determine version tag
